--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@ license:MIT                     //
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index html</title>
-    <link rel="stylesheet" href="./css/fontawesome-free-5.15.3-web/css/all.css">
     <script src="https:kit.fontawesome.com/6cf01c86bf.js" crossorigin="anonymous" ></script>
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.css">
    
 </head>
 <body ><h4>MY PROFILE</h4>
