--- a/contacts.html
+++ b/contacts.html
@@ -18,12 +18,12 @@
         <a href="./blog.html"><i class="fa fa-blog"></i>Blog</a>
         <a href="./services.html"><i class="fa fa-gears"></i>Service</a>
         <a href="./contacts.html"><i class="fa fa-inbox"></i>Contact</a>
-        <a href="james resume.pdf"><i class="fa fa-file"></i>Resume</a>
+        <a href="susan resume.pdf"><i class="fa fa-file"></i>Resume</a>
 
     </nav><fieldset>
     <hr>
    
-    <img src="James___2_-removebg-preview.png" alt="jamesmungai" width='300',height='300'top='50px'>
+    <img src="susan___2_-removebg-preview.png" alt="jamesmungai" width='300',height='300'top='50px'>
    <pre><h1>Get me through </h1></pre>
     Email <span color='red'>*</span> <br>
     <input type= "text"placeholder =" your email" name=""text=""><br> <br>
@@ -32,12 +32,7 @@
     Tel
     <select><label for="">kenya
         <option value="kenya">+254</option></label>
-        <option value="">+231</option>
-        <option value="">+232</option>
-        <option value="">+223</option>
-        <option value="">+234</option>
-        <option value="">+235</option>
-        <option value="">+236</option>
+        
     </select>
     <input type= "text "placeholder ="07*******" name=""><br> <br>
     Preferred mean :<input type= "radio" name="group 1" value="1">
@@ -49,8 +44,8 @@
                <label>
                 <select>
                     <option value="1">web application</option>
-                    <option value="1">c++</option>
-                    <option value="1">c</option>
+                    <option value="1">java</option>
+                    
                 </select>
             </label>
            <p></p> 
@@ -63,12 +58,12 @@
         </fieldset>
     <hr/><!--footer-->
 <footer>
-<ul><span>FOLLOW ME ON:</span><br>
-    <a href=" https://jamesmunga.github.io/portfolio/"><i class="fa fa-github" aria-hidden="true" title="github"></i> </a>
-    <a href="http://www.linkedin.com/in/james-mungai-35739520b"><i class="fa fa-linkedin" title="linkedin" ></i></a> 
-             <a href="http://www.instagram.com/ig/@jamesmungai"><i class="fa fa-instagram" title="instagram" ></i> </a>
-             <a href="http://www.twitter.com//@jamesMU595991761"><i class="fa fa-twitter" title="twitter"> </i></a> 
-</ul>
+<ul><span>GET ME ON:</span> <br><pre>
+        <a href=" https://susanwangari.github.io/portfolio/"><i class="fa fa-github" aria-hidden="true" title="github"></i> </a>
+        <a href="http://www.linkedin.com/in/"><i class="fa fa-linkedin" title="linkedin" ></i></a> 
+                 <a href="http://www.instagram.com/ig/"><i class="fa fa-instagram" title="instagram" ></i> </a>
+                 <a href="http://www.twitter.com//"><i class="fa fa-twitter" title="twitter"> </i></a> 
+      </ul>
 <p>&copy  2021   All rights reserved&trade; <a href="" >  james mungai</a> </p>
 <hr/>
 </footer>
