--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--//////////////////////////////
 ARTICLE potfolio to homepage    //
-Author:jamesmungai              //
+Author:susan wangari             //
 Date:16/june                    //
 license:MIT                     //
 ///////////////////////////////-->
@@ -37,9 +37,9 @@ license:MIT                     //
 <header>
     <img src="IMG-20210806-WA0001-removebg-preview" alt="susan" width='300',height='300'>
     
-    <h1 >Hi am James Mungai N</h1><hr/>
+    <h1 >Hi am ...</h1><hr/>
     <p>
-            Am a web developer student at zetech university ,with a 0.5 years of experience in web 
+            Am a web developer student at zetech university ,with a 1 years of experience in web 
         development environment .I am aspiring to become one of the best web developer in my 
         country.
     </p>
@@ -49,11 +49,11 @@ license:MIT                     //
             <div class="card">
          <h2>featured-projects</h2>
 
-       <img src="Screenshot (59).png" alt="james"  width='250px',
+       <img src="Screenshot (59).png" alt="susan"  width='250px',
        height='200px';>
-       <img src="Screenshot (53).png" alt="james"  width='250px',
+       <img src="Screenshot (53).png" alt=susan"  width='250px',
        height='200px';>
-       <img src="Screenshot (57).png" alt="james"  width='250px',
+       <img src="Screenshot (57).png" alt="susan"  width='250px',
        height='200px';>
     </div>
     </section><br>
@@ -78,13 +78,12 @@ license:MIT                     //
 <hr/><!--footer-->
 <footer>
     
-<ul><span>FOLLOW ME ON:</span><br>
-
- <a href=" https://jamesmunga.github.io/portfolio/"><i class="fa fa-github" aria-hidden="true" title="github"></i> </a>
-<a href="http://www.linkedin.com/in/james-mungai-35739520b"><i class="fa fa-linkedin" title="linkedin" ></i></a> 
-         <a href="http://www.instagram.com/ig/@jamesmungai"><i class="fa fa-instagram" title="instagram" ></i> </a>
-         <a href="http://www.twitter.com//@jamesMU595991761"><i class="fa fa-twitter" title="twitter"> </i></a> 
-</ul>
+<ul><span>GET ME ON:</span> <br><pre>
+        <a href=" https://susanwangari.github.io/portfolio/"><i class="fa fa-github" aria-hidden="true" title="github"></i> </a>
+        <a href="http://www.linkedin.com/in/"><i class="fa fa-linkedin" title="linkedin" ></i></a> 
+                 <a href="http://www.instagram.com/ig/"><i class="fa fa-instagram" title="instagram" ></i> </a>
+                 <a href="http://www.twitter.com//"><i class="fa fa-twitter" title="twitter"> </i></a> 
+      </ul>
 <p>&copy   2021  All rights reserved &trade;<a href="" >  james mungai</a> </p>
 <hr/>
 </footer>
