--- a/services.html
+++ b/services.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>james mungai :services</title>
-    <link rel="stylesheet" href="./css/fontawesome-free-5.15.3-web/css/all.css">
     <script src="https:kit.fontawesome.com/6cf01c86bf.js" crossorigin="anonymous" ></script>
 
 </head>
@@ -18,17 +17,17 @@
     <a href="./blog.html"><i class="fa fa-blog"></i>Blog</a>
     <a href="./services.html"><i class="fa fa-gears"></i>Service</a>
     <a href="./contacts.html"><i class="fa fa-inbox"></i>Contact</a>
-    <a href="james resume.pdf"><i class="fa fa-file"></i>Resume</a>
+    <a href="susan  resume.pdf"><i class="fa fa-file"></i>Resume</a>
     </nav>
     <hr>
     <h1>services</h1>
     <hr/><!--footer-->
 <footer>
-    <ul><span>FOLLOW ME ON:</span>
-        <a href=" https://jamesmunga.github.io/portfolio/"><i class="fa fa-github" aria-hidden="true" title="github"></i> </a>
-        <a href="http://www.linkedin.com/in/james-mungai-35739520b"><i class="fa fa-linkedin" title="linkedin" ></i></a> 
-                 <a href="http://www.instagram.com/ig/@jamesmungai"><i class="fa fa-instagram" title="instagram" ></i> </a>
-                 <a href="http://www.twitter.com//@jamesMU595991761"><i class="fa fa-twitter" title="twitter"> </i></a> 
+    <ul><span>GET ME ON:</span> <br><pre>
+        <a href=" https://susanwangari.github.io/portfolio/"><i class="fa fa-github" aria-hidden="true" title="github"></i> </a>
+        <a href="http://www.linkedin.com/in/"><i class="fa fa-linkedin" title="linkedin" ></i></a> 
+                 <a href="http://www.instagram.com/ig/"><i class="fa fa-instagram" title="instagram" ></i> </a>
+                 <a href="http://www.twitter.com//"><i class="fa fa-twitter" title="twitter"> </i></a> 
       </ul>
 <p>&copy   2021  All rights reserved  &trade;<a href="" >  james mungai</a> </p></center>
 <hr/>
