--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ license:MIT                     //
     <div class="container">
     <!--Navigation bar section-->
     <nav class="navbar">
-<a href="" class="nav-link">james mungai</a>
+<a href="" class="nav-link">susan wangari</a>
 <div>
     <a href="./index.html"><i class="fa fa-home"></i>Home</a>
     <a href="./project.html"><i class="fa fa-project-diagram"></i>Project</a>
@@ -84,7 +84,7 @@ license:MIT                     //
                  <a href="http://www.instagram.com/ig/"><i class="fa fa-instagram" title="instagram" ></i> </a>
                  <a href="http://www.twitter.com//"><i class="fa fa-twitter" title="twitter"> </i></a> 
       </ul>
-<p>&copy   2021  All rights reserved &trade;<a href="" >  james mungai</a> </p>
+<p>&copy   2021  All rights reserved &trade;<a href="" >  susan wangari</a> </p>
 <hr/>
 </footer>
 </div>
