--- a/project.html
+++ b/project.html
@@ -31,7 +31,7 @@
                  <a href="http://www.instagram.com/ig/"><i class="fa fa-instagram" title="instagram" ></i> </a>
                  <a href="http://www.twitter.com//"><i class="fa fa-twitter" title="twitter"> </i></a> 
       </ul>
-<p>&copy   2021   All rights reserved &trade;<a href="" >  james mungai</a> </p></center>
+<p>&copy   2021   All rights reserved &trade;<a href="" >  susan wangari</a> </p></center>
 <hr/>
 </footer>
 </body>
