--- a/contacts.html
+++ b/contacts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>james mungai: contacts</title>
+    <title>susan wangari: contacts</title>
     <link rel="stylesheet" href="contacts.css">
     <link rel="stylesheet" href="./css/fontawesome-free-5.15.3-web/css/all.css">
     <script src="https:kit.fontawesome.com/6cf01c86bf.js" crossorigin="anonymous" ></script>
@@ -64,7 +64,7 @@
                  <a href="http://www.instagram.com/ig/"><i class="fa fa-instagram" title="instagram" ></i> </a>
                  <a href="http://www.twitter.com//"><i class="fa fa-twitter" title="twitter"> </i></a> 
       </ul>
-<p>&copy  2021   All rights reserved&trade; <a href="" >  james mungai</a> </p>
+<p>&copy  2021   All rights reserved&trade; <a href="" >  susan wangari</a> </p>
 <hr/>
 </footer>
 
