--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        jamesmungai :about
+      susan wangari :about
     </title>
     <link rel="stylesheet" href="./css/fontawesome-free-5.15.3-web/css/all.css">
     <script src="https:kit.fontawesome.com/6cf01c86bf.js" crossorigin="anonymous" ></script>
@@ -72,7 +72,7 @@
                  <a href="http://www.instagram.com/ig/"><i class="fa fa-instagram" title="instagram" ></i> </a>
                  <a href="http://www.twitter.com//"><i class="fa fa-twitter" title="twitter"> </i></a> 
       </ul>
-<p>&copy   2021  All rights reserved  &trade;<a href="" >  james mungai</a> </p></center>
+<p>&copy   2021  All rights reserved  &trade;<a href="" > susan wangari</a> </p></center>
 <hr/>
 </footer>
 
