--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@ license:MIT                     //
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index html</title>
     <script src="https:kit.fontawesome.com/45213adc07.js" crossorigin="anonymous" ></script>
-
     <link rel="stylesheet" href="main.css">
-   
 </head>
 <body ><h4>MY PROFILE</h4>
     <div class="container">
@@ -35,13 +33,12 @@ license:MIT                     //
     <hr>
 <!--jumbotron-->
 <header>
-    <img src="IMG-20210806-WA0001-removebg-preview" alt="susan" width='300',height='300'>
+    <img src="susan.png" alt="susan" width='300',height='300'>
     
     <h1 >Hi am ...</h1><hr/>
     <p>
             Am a web developer student at zetech university ,with a 1 years of experience in web 
-        development environment .I am aspiring to become one of the best web developer in my 
-        country.
+        development environment .
     </p>
 </header>
 <main>
@@ -69,7 +66,7 @@ license:MIT                     //
                 <div class="card">
                     <h2>Frequently Asked Questions</h2>
                    <h4>
-                       <p> what are the technical and additional skill that are needed to be front _end _developder </p>
+                       <p>what is the requirements ofa front _end _developer </p>
                    </h4>
         </div>
     </section>
