--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ license:MIT                     //
 <header>
     <img src="susan.png" alt="susan" width='300',height='300'>
     
-    <h1 >Hi am ...</h1><hr/>
+    <h1 >Hi am susan wangari</h1><hr/>
     <p>
             Am a web developer student at zetech university ,with a 1 years of experience in web 
         development environment .
