--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@ license:MIT                     //
             <div class="card">
          <h2>featured-projects</h2>
 
-       <img src="Screenshot (59).png" alt="susan"  width='250px',
+       <img src="IMG-20210807-WA0006.jpg" alt="susan"  width='250px',
        height='200px';>
-       <img src="Screenshot (53).png" alt=susan"  width='250px',
+       <img src="IMG-20210807-WA0002.jpg" alt=susan"  width='250px',
        height='200px';>
-       <img src="Screenshot (57).png" alt="susan"  width='250px',
+       <img src="IMG-20210807-WA0003.jpg" alt="susan"  width='250px',
        height='200px';>
     </div>
     </section><br>
