--- a/project.html
+++ b/project.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>james mungai: project</title>
-    <link rel="stylesheet" href="./css/fontawesome-free-5.15.3-web/css/all.css">
-    <script src="https:kit.fontawesome.com/6cf01c86bf.js" crossorigin="anonymous" ></script>
+    <script src="https://kit.fontawesome.com/45213adc07.js" crossorigin="anonymous" ></script>
 
 </head>
 <body>
