--- a/contacts.html
+++ b/contacts.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>susan wangari: contacts</title>
     <link rel="stylesheet" href="contacts.css">
-    <link rel="stylesheet" href="./css/fontawesome-free-5.15.3-web/css/all.css">
-    <script src="https:kit.fontawesome.com/6cf01c86bf.js" crossorigin="anonymous" ></script>
+    <script src="https://kit.fontawesome.com/45213adc07.js" crossorigin="anonymous"></script>
   </head>
 <body>
     <hr>
