--- a/contacts.html
+++ b/contacts.html
@@ -22,7 +22,7 @@
     </nav><fieldset>
     <hr>
    
-    <img src="susan___2_-removebg-preview.png" alt="jamesmungai" width='300',height='300'top='50px'>
+    <img src="susan___2_-removebg-preview.png" alt="susan" width='300',height='300'top='50px'>
    <pre><h1>Get me through </h1></pre>
     Email <span color='red'>*</span> <br>
     <input type= "text"placeholder =" your email" name=""text=""><br> <br>
