--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@ license:MIT                     //
 <hr/><!--footer-->
 <footer>
     
-<ul><span>GET ME ON:</span> <br><pre>
+<ul><span>GET ME ON:</span> <br>
         <a href=" https://susanwangari.github.io/portfolio/"><i class="fa fa-github" aria-hidden="true" title="github"></i> </a>
         <a href="http://www.linkedin.com/in/"><i class="fa fa-linkedin" title="linkedin" ></i></a> 
-                 <a href="http://www.instagram.com/ig/"><i class="fa fa-instagram" title="instagram" ></i> </a>
-                 <a href="http://www.twitter.com//"><i class="fa fa-twitter" title="twitter"> </i></a> 
+         <a href="http://www.instagram.com/ig/"><i class="fa fa-instagram" title="instagram" ></i> </a>
+          <a href="http://www.twitter.com//"><i class="fa fa-twitter" title="twitter"> </i></a> 
       </ul>
 <p>&copy   2021  All rights reserved &trade;<a href="" >  susan wangari</a> </p>
 <hr/>
