--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ license:MIT                     //
 <hr/><!--footer-->
 <footer>
     
-<ul><span>GET ME ON:</span> <br>
+<ul><span>GET ME ON:</span>
         <a href=" https://susanwangari.github.io/portfolio/"><i class="fa fa-github" aria-hidden="true" title="github"></i> </a>
         <a href="http://www.linkedin.com/in/"><i class="fa fa-linkedin" title="linkedin" ></i></a> 
          <a href="http://www.instagram.com/ig/"><i class="fa fa-instagram" title="instagram" ></i> </a>
