--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>susan wangari :services</title>
-    <script src="https:kit.fontawesome.com/6cf01c86bf.js" crossorigin="anonymous" ></script>
+    <script src="https:kit.fontawesome.com/6cf01c86bf.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -23,7 +23,7 @@
     <h1>services</h1>
     <hr/><!--footer-->
 <footer>
-    <ul><span>GET ME ON:</span> <br><pre>
+    <ul><span>GET ME ON:</span> 
         <a href=" https://susanwangari.github.io/portfolio/"><i class="fa fa-github" aria-hidden="true" title="github"></i> </a>
         <a href="http://www.linkedin.com/in/"><i class="fa fa-linkedin" title="linkedin" ></i></a> 
                  <a href="http://www.instagram.com/ig/"><i class="fa fa-instagram" title="instagram" ></i> </a>
