--- a/blog.html
+++ b/blog.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+      <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>susan :blog</title>
-    <style type="css/text">
-    </style>
-    
-    <script src="https:kit.fontawesome.com/6cf01c86bf.js" crossorigin="anonymous" ></script>
-<link rel="stylesheet" href="/main.css">
+    <script src="https://kit.fontawesome.com/45213adc07.js" crossorigin="anonymous"></script>
 </head>
 <body >
     <hr>
