--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
     <h1>my stories</h1>
     <hr/><!--footer-->
 <footer>
-    <ul><span>GET ME ON:</span> <br><pre>
+    <ul><span>GET ME ON:</span> 
         <a href=" https://susanwangari.github.io/portfolio/"><i class="fa fa-github" aria-hidden="true" title="github"></i> </a>
         <a href="http://www.linkedin.com/in/"><i class="fa fa-linkedin" title="linkedin" ></i></a> 
                  <a href="http://www.instagram.com/ig/"><i class="fa fa-instagram" title="instagram" ></i> </a>
