--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                   <td>MYSQL</td>
             </tr>
             <tr>
-                <td>javascript</td>
+                <td>python</td>
                 <td></td>
                 <td></td>
           </tr>
@@ -66,7 +66,7 @@
         </main>
         <hr/><!--footer-->
 <footer>
-   <ul><span>GET ME ON:</span> <br><pre>
+   <ul><span>GET ME ON:</span> 
         <a href=" https://susanwangari.github.io/portfolio/"><i class="fa fa-github" aria-hidden="true" title="github"></i> </a>
         <a href="http://www.linkedin.com/in/"><i class="fa fa-linkedin" title="linkedin" ></i></a> 
                  <a href="http://www.instagram.com/ig/"><i class="fa fa-instagram" title="instagram" ></i> </a>
