--- a/about.html
+++ b/about.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+  
+   <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
       susan wangari :about
     </title>
-    <script src="https:kit.fontawesome.com/6cf01c86bf.js" crossorigin="anonymous" ></script>
+    <script src="https://kit.fontawesome.com/45213adc07.js" crossorigin="anonymous"></script>
 
 </head>
 <body><hr>
